--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jquery": "^3.4.1",
     "jquery-bar-rating": "^1.2.2",
     "mapbox-gl": "^1.2.1",
+    "places.js": "^1.16.4",
     "popper.js": "^1.15.0"
   },
   "devDependencies": {
